--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no" name="viewport"/>
 	<title>chrome easter egg: t-rex runner</title>
 	<link rel="stylesheet" href="index.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<script src="index.js"></script>
 </head>
 <body class="offline" id="t">
@@ -14,6 +15,9 @@
 	<div class="interstitial-wrapper" id="main-frame-error">
 		<div id="main-content">
 			<div class="icon icon-offline"></div>
+		</div>
+		<div class="game-content">
+			<span class="current-score">32111</span>
 		</div>
 		<div id="offline-resources">
 			<img id="offline-resources-1x" src="assets/default_100_percent/100-offline-sprite.png">
