collision done & setting highscore

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 <body class="offline" id="t">
 <div class="container">
 	<div class="interstitial-wrapper" id="main-frame-error">
+		<div id="user" data-username="username" data-highscore="1033"></div>
 		<div id="main-content">
 			<div class="icon icon-offline"></div>
-		</div>
-		<div class="game-content">
-			<span class="current-score">32111</span>
 		</div>
 		<div id="offline-resources">
 			<img id="offline-resources-1x" src="assets/default_100_percent/100-offline-sprite.png">
