add highscore, disable arcade

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 	<meta charset="utf-8"/>
 	<meta content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no" name="viewport"/>
-	<title>chrome easter egg: t-rex runner</title>
+	<title>Ngabuburit</title>
 	<link rel="stylesheet" href="index.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<script src="index.js"></script>
@@ -13,7 +13,7 @@
 <body class="offline" id="t">
 <div class="container">
 	<div class="interstitial-wrapper" id="main-frame-error">
-		<div id="user" data-username="username" data-highscore="1033"></div>
+		<div id="user" data-username="maul"></div>
 		<div id="main-content">
 			<div class="icon icon-offline"></div>
 		</div>
