add highscore entry

--- a/highscore.html
+++ b/highscore.html
@@ -11,6 +11,7 @@
 </head>
 <body class='offline' id='t'>
 <div class='interstitial-wrapper container' id='highscore'>
+	<a href="index.html" class="btn btn-sm btn-danger" style="float: right;margin-top: 10px;">Kembali</a>
 	<h2>!HighScore</h2>
 	<div class='table-responsive' id='main-content'>
 		<table class='table'>
